	server/classes/zone.h - Added which_sector and sector_contains inline methods.

2014-08-24 - TAQ
	Created client/motif/msglog.cc, client/motif/msglog.h.
	client/motif/client.cc, client/motif/client.h - Removed a bunch of stuff that was made unnecessary by the C++-ification of the geometry/texture caches.
	client/motif/message.cc - We're now going to have the message box function as a sink for std::clog messages, via the MessageLog streambuf.

2014-08-30 - TAQ
	client/motif/client.h - Removed things that no longer needed to exist.
	client/motif/view.cc - Started removing the hash table, since we have a very nice new cache object that does that for us.

2014-08-31 - TAQ
	client/cache.h - Instead of passing the default object into the constructor, we'll load objid 0 from the disk.
	client/configdata.cc, client/configdata.h - We're now ConfigData, to match the rest of our classes.
	client/motif/client.cc - Started integrating the Comm and ConfigData objects.  This is going to be a bit more complex than I thought.
	client/motif/client.h - We need to split things into two halves, since the X stuff will not apparently coexist in the same files as stuff that uses Eigen.
	client/motif/command.c - We no longer need the client.h include.
	client/motif/menu.cc - Now called menu.cc.  We're using the std::clog, and the new comm object.

2015-05-02 - TAQ
	server/classes/modules/console.h - The libwrap call changed slightly, so had to update it here.
	server/classes/modules/inet_console.cc - Moved most of the hostname-grabbing into wrap_request, since that's the only place it's used.  Switched to hosts_ctl, since it does a lot more stuff automatically.

2015-07-24 - TAQ
	Converted all source to use stdint types.

2015-08-01 - TAQ
	Autoconf conversion begins.
	proto/byteswap.c, proto/proto.h - Moved a bunch of stuff out of proto.h into byteswap.c.  Cleaned up server_notice packet handling.